samples/_failures_safe/1761638451_31477c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_895b914c.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_895b914c.c:153:16: error: ‘is’ undeclared (first use in this function)
  153 |     } else if (is
      |                ^~
./samples/SAFE/__tmp_895b914c.c:153:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_895b914c.c:153:18: error: expected ‘)’ at end of input
  153 |     } else if (is
      |               ~  ^
      |                  )
./samples/SAFE/__tmp_895b914c.c:153:5: error: expected declaration or statement at end of input
  153 |     } else if (is
      |     ^
